# sqladmin-litestar-plugin

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/: dependabot.yaml
.github/workflows/: ci.yaml  publish.yaml
examples/aa_audit_base/: main.py
scripts/: tests
src/sqladmin_litestar_plugin/: __init__.py
src/sqladmin_litestar_plugin/ext/: advanced_alchemy.py  patches.py
tests/: conftest.py  test_plugin.py
tests/ext/: test_advanced_alchemy.py
